--- a/views/news.html
+++ b/views/news.html
@@ -1,33 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="preload" href="../fonts/SyntaxLTStd-Bold.otf">
-    <link rel="preload" href="../fonts/SyntaxLTStd-Roman.otf">
-    <title>Agustín Scirica - Noticias</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/main.css">
+  <!--Enlace al CDN de Bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <!--Enlace al CSS de FontAwesome-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+  <!--Enlaces internos y relativos a los archivos de fuente, almacenados dentro de la carpeta fonts-->
+  <link rel="preload" href="fonts/SyntaxLTStd-Bold.otf">
+  <link rel="preload" href="fonts/SyntaxLTStd-Roman.otf">
+  <title>Agustín Scirica - Noticias</title>
 </head>
+
 <body>
-    <header id="top">
-        <h1>ACS</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">home</a></li>
-                <li><a href="../views/about-me.html">sobre mi</a></li>
-                <li><a href="../views/plans.html">planes</a></li>
-                <li>noticias</li>
-                <li><a href="../views/contact-me.html">contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <!--Aun tengo que definir el contenido a mostrar en eseta sección. La idea de esta sección se podrá ver en el readme.me-->
-    </main>
-    <footer>
-        <h3>Todos los derechos reservados</h3>
-        <a href="#top">Volver al inicio</a>
-    </footer>
+  <!--INICIO BARRA DE NAVEGACION-->
+  <nav class="navbar navbar-expand-lg fondo-naranja">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img src="../img/logo.png" alt="logo" height="60"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="../index.html">inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./about-me.html">sobre mí</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./plans.html">planes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-page="current" href="#">noticias</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contact-me.html">contacto</a>
+          </li>
+      </div>
+    </div>
+  </nav>
+  <!--FIN BARRA DE NAVEGACION-->
+  <!--INICIO FOOTER-->
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <!-- Facebook -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998;"
+          href="https://www.facebook.com/agustinsciricamedife/" role="button"><i class="fab fa-facebook-f"></i></a>
+        <!-- Instagram -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac;"
+          href="https://www.instagram.com/agustinsciricamedife/" role="button"><i class="fab fa-instagram"></i></a>
+        <!-- Linkedin -->
+        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca;"
+          href="https://www.linkedin.com/in/agustin-scirica" role="button"><i class="fab fa-linkedin-in"></i></a>
+      </section>
+    </div>
+    <!--COPYRIGHT-->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2023 Copyright:
+      <a class="text-white" href="mailto:fernandojfuertes@gmail.com">FJF</a>
+    </div>
+  </footer>
+  <!--FIN FOOTER-->
 </body>
+
 </html>
