Se trabajan las imagenes en tamaño

--- a/views/about-me.html
+++ b/views/about-me.html
@@ -63,7 +63,7 @@
           <button type="button" class="btn fondo-naranja"><a href="./plans.html">Conocé los planes</a></button>
         </div>
         <div class="col-6">
-          <img src="../img/ACS.jpg" class="img-responsive" width="75%" alt="foto en blanco y negro de Agustin Scirica">
+          <img src="../img/ACS.jpg" class="img-fluid" width="50%" alt="foto en blanco y negro de Agustin Scirica">
         </div>
       </div>
     </div>
