--- a/views/news.html
+++ b/views/news.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="preload" href="../fonts/SyntaxLTStd-Bold.otf">
-    <link rel="preload" href="../fonts/SyntaxLTStd-Roman.otf">
-    <title>Agustín Scirica - Noticias</title>
+    <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
+    <title>Agustín Scirica | Asesor Medifé</title>
 </head>
+
 <body>
-    <header id="top">
-        <h1>ACS</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">home</a></li>
-                <li><a href="../views/about-me.html">sobre mi</a></li>
-                <li><a href="../views/plans.html">planes</a></li>
-                <li>noticias</li>
-                <li><a href="../views/contact-me.html">contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <!--Aun tengo que definir el contenido a mostrar en eseta sección. La idea de esta sección se podrá ver en el readme.me-->
-    </main>
-    <footer>
-        <h3>Todos los derechos reservados</h3>
-        <a href="#top">Volver al inicio</a>
-    </footer>
+
+    <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="check-button">
+            <i class="fas fa-bars"></i>
+        </label>
+        <label class="logo">ACS Medifé</label>
+        
+        <ul>
+            <li><a href="../index.html">inicio</a></li>
+            <li><a href="../views/about-me.html">sobre mi</a></li>
+            <li><a href="../views/plans.html">planes</a></li>
+            <li><a href="../views/news.html" class="active">noticias</a></li>
+            <li><a href="../views/contact-me.html">contacto</a></li>
+        </ul>
+    </nav>
+
 </body>
+
 </html>
