--- a/views/news.html
+++ b/views/news.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
     <title>Agustín Scirica | Asesor Medifé</title>
 </head>
@@ -17,7 +19,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <label class="logo">ACS Medifé</label>
-        
+
         <ul>
             <li><a href="../index.html">inicio</a></li>
             <li><a href="../views/about-me.html">sobre mi</a></li>
@@ -26,6 +28,106 @@
             <li><a href="../views/contact-me.html">contacto</a></li>
         </ul>
     </nav>
+
+    <div class="album py-5 bg-body-tertiary">
+        <div class="container">
+
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-01.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">Aprovecha esta oportunidad única en la semana de las paternidades.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-02.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">Con MEDIFÉ tenes tiempo para lo importante.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-03.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">¡Ahorra tiempo con MEDIFÉ!</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-04.jpg" alt="">
+                        <div class="card-body">
+                            <p class="card-text">No te quedes afuera. Aprovecha esta promo por el súper finde XXL</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-05.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">Con CamDoctor dejar de fumar es posible.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-06.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">Conocé nuestros beneficios y consultá por asesoramiento.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-07.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">Medifé está conmigo.</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-08.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">¿Ya conocés todos los beneficios que tiene Medifé para vos?</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <img src="../img/news-08.jpg" alt="imagen de noticia">
+                        <div class="card-body">
+                            <p class="card-text">¿Ya conocés todos los beneficios que tiene Medifé para vos?</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </body>
 
