--- a/views/about-me.html
+++ b/views/about-me.html
@@ -17,7 +17,7 @@
             <i class="fas fa-bars"></i>
         </label>
         <label class="logo">ACS Medifé</label>
-        
+
         <ul>
             <li><a href="../index.html">inicio</a></li>
             <li><a href="../views/about-me.html" class="active">sobre mi</a></li>
@@ -26,6 +26,22 @@
             <li><a href="../views/contact-me.html">contacto</a></li>
         </ul>
     </nav>
+
+    <div class="body-sobre-mi">
+        <div class="sobre-mi-izq">
+            <img src="../img/ACS.jpg" alt="foto de Agustin Scirica">
+        </div>
+        <div class="sobre-mi-der">
+            <h1>¡Hola, soy Agustin!</h1>
+            <p>y me especializo en brindar asesoramiento personalizado on-line sobre planes de salud individuales y
+                familiares de Medifé. Mi objetivo es ayudarte a encontrar el plan perfecto que se adapte a tus
+                necesidades y
+                las de tus seres queridos. Gracias a mi experiencia, y el respaldo de Medifé, podés confiar que
+                recibirás u
+                nservicio de calidad y una atención integral ¡Contactame hoy mismo para obtener la tranquilidad y
+                protección que te merecés!</p>
+        </div>
+    </div>
 
 </body>
 
