Se agrega SEO local en todas las vistas html

--- a/views/about-me.html
+++ b/views/about-me.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
-    <title>Agustín Scirica | Asesor Medifé</title>
+    <title>Agustín Scirica | Sobre mí</title>
+    <meta name="description" content="Asesoramiento personalizado on-line sobre planes de salud individuales y familiares de Medifé. Encuentra el plan perfecto que se adapte a tus necesidades y las de tus seres queridos. Confía en mi experiencia respaldada por Medifé para recibir un servicio de calidad y atención integral. ¡Contáctame hoy mismo para obtener la tranquilidad y protección que te mereces!">
+    <meta name="keywords" content="medicina prepaga, cobertura médica privada, seguro de salud privado, servicios médicos, medicina privada, atención médica, seguro médico, salud y bienestar, empresa de medicina prepaga, Medifé">
 </head>
 
 <body>
