--- a/views/news.html
+++ b/views/news.html
@@ -9,6 +9,8 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
     <title>Agustín Scirica | Asesor Medifé</title>
+    <meta name="description" content="Últimas novedades y noticias sobre servicios médicos y cobertura de medicina prepaga. Mantente informado sobre nuestros planes, beneficios y novedades en el ámbito de la salud.">
+    <meta name="keywords" content="medicina prepaga, cobertura médica privada, seguro de salud privado, servicios médicos, medicina privada, atención médica, seguro médico, salud y bienestar, empresa de medicina prepaga, Medifé">
 </head>
 
 <body>
