--- a/views/plans.html
+++ b/views/plans.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
     <title>Agustín Scirica | Asesor Medifé</title>
+    <meta name="description" content="Descubre los mejores planes de medicina prepaga y sus detalles en nuestro sitio web. Ofrecemos una amplia gama de opciones con cobertura médica completa, atención de calidad y acceso a una red de profesionales de la salud de confianza. Encuentra el plan que se adapte a tus necesidades y disfruta de la tranquilidad que brinda contar con una medicina prepaga confiable.">
+    <meta name="keywords" content="medicina prepaga, cobertura médica privada, seguro de salud privado, servicios médicos, medicina privada, atención médica, seguro médico, salud y bienestar, empresa de medicina prepaga, Medifé">
 </head>
 
 <body>
