--- a/views/contact-me.html
+++ b/views/contact-me.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/a22c32b01e.js" crossorigin="anonymous"></script>
     <title>Agustín Scirica | Asesor Medifé</title>
+    <meta name="keywords" content="medicina prepaga, cobertura médica privada, seguro de salud privado, servicios médicos, medicina privada, atención médica, seguro médico, salud y bienestar, empresa de medicina prepaga, Medifé">
 </head>
 
 <body>
