--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
+@charset "UTF-8";
 /*Estilos actuales de fuentes de Medifé*/
 @font-face {
-    font-family: "SyntaxLTStd-Roman";
-    src: url(../fonts/SyntaxLTStd-Roman.otf) format("opentype");
+  font-family: "SyntaxLTStd-Roman";
+  src: url(../fonts/SyntaxLTStd-Roman.otf) format("opentype");
 }
-
-@font-face {
+/* @font-face {
     font-family: "SyntaxLTStd-Italic";
     src: url(../fonts/SyntaxLTStd-Italic.otf) format("opentype");
 }
@@ -22,446 +22,466 @@
 @font-face {
     font-family: "SyntaxLTStd-UltraBlack";
     src: url(../fonts/SyntaxLTStd-UltraBlack.otf) format("opentype");
-}
-
+} */
 /*Propiedades de reset*/
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 /*Estilos de utilidad*/
 .fuente-naranja {
-    color: #eb5f0a;
+  color: #eb5f0a;
 }
 
 .fondo-oscuro {
-    background-color: #58575c;
+  background-color: #58575c;
 }
 
 /*Estilos principales*/
 html,
 body {
-    font-family: "SyntaxLTStd-Roman", sans-serif;
-    color: #58575c;
+  font-family: "SyntaxLTStd-Roman", sans-serif;
+  color: #58575c;
+}
+
+/*Estilos de utilidad*/
+.fuente-naranja {
+  color: #eb5f0a;
+}
+
+.fondo-oscuro {
+  background-color: #58575c;
+}
+
+.boton a {
+  background: #eb5f0a;
+  color: white;
+  font-size: 18px;
+  border-radius: 3px;
+  padding: 5px 13px;
+  cursor: pointer;
 }
 
 /*Estilos de cabecera para todos los HTML*/
-nav {
-    background: #eb5f0a;
-    height: 80px;
-    width: 100%;
-}
-
 label.logo {
-    color: white;
-    font-size: 35px;
-    line-height: 80px;
-    padding: 0 100px;
-    font-weight: bold;
-    color: #58575c;
+  color: white;
+  font-size: 35px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
+  color: #58575c;
 }
 
+nav {
+  background: #eb5f0a;
+  height: 80px;
+  width: 100%;
+}
 nav ul {
-    float: right;
-    margin-right: 50px;
+  float: right;
+  margin-right: 50px;
 }
-
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
-
 nav ul li a {
-    color: white;
-    font-size: 18px;
-    padding: 5px 13px;
-    border-radius: 3px;
+  color: white;
+  font-size: 18px;
+  padding: 5px 13px;
+  border-radius: 3px;
 }
-
-a.active,
-a:hover {
-    background: #be4801;
-    transition: 0.5s;
+nav ul li a.active,
+nav ul li a:hover {
+  background: #be4801;
+  transition: 0.5s;
 }
 
 #check {
-    display: none;
+  display: none;
 }
 
 .check-button {
-    display: none;
-    font-size: 30px;
-    color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
-    cursor: pointer;
+  display: none;
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
 }
 
 /*Estilos de cuerpo principal para index.html*/
 section {
-    background: url('../img/family-2.jpg');
-    background-size: cover;
-    height: calc(100vh - 80px);
+  background: url("../img/family-2.jpg");
+  background-size: cover;
+  height: calc(100vh - 80px);
+}
+section .body-index {
+  max-width: 28%;
+  margin-left: 100px;
+  padding-top: 70px;
+}
+section .body-index h1 {
+  font-size: 4rem;
+}
+section .body-index p {
+  max-width: 85%;
+  font-size: 1.5rem;
+  line-height: 34px;
+  padding-top: 20px;
+  padding-left: 35px;
+  margin-bottom: 40px;
+}
+section .body-index a {
+  background: #eb5f0a;
+  color: white;
+  font-size: 18px;
+  border-radius: 3px;
+  padding: 5px 13px;
+  cursor: pointer;
+}
+section .body-index a.active,
+section .body-index a:hover {
+  background: #be4801;
 }
 
-.body-index {
-    max-width: 28%;
-    margin-left: 100px;
-    padding-top: 70px;
-}
-
-.body-index h1,
-.body-sobre-mi h1 {
-    font-size: 4rem;
-}
-
-.body-index p {
-    max-width: 85%;
-}
-
-.body-index p,
-.body-sobre-mi p {
-    font-size: 1.5rem;
-    line-height: 34px;
-    padding-top: 20px;
-    padding-left: 35px;
-    margin-bottom: 40px
-}
-
-.body-index a,
-.body-contacto .lado-derecho form input,
-.boton a {
-    background: #eb5f0a;
-    color: white;
-    font-size: 18px;
-    border-radius: 3px;
-    padding: 5px 13px;
-    cursor: pointer;
-}
-
-.body-index a.active,
-.body-index a:hover,
-.body-contacto .lado-derecho form input.active,
-.body-contacto .lado-derecho form input:hover {
-    background: #be4801;
-}
-
-/*Estilos para about-me.thml*/
+/*Estilos para about-me.html*/
 .body-sobre-mi {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin-bottom: 140px;
 }
-
+.body-sobre-mi h1 {
+  font-size: 4rem;
+}
+.body-sobre-mi p {
+  font-size: 1.5rem;
+  line-height: 34px;
+  padding-top: 20px;
+  padding-left: 35px;
+  margin-bottom: 40px;
+}
 .body-sobre-mi .sobre-mi-der {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    margin-bottom: 140px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin-bottom: 140px;
 }
-
 .body-sobre-mi .sobre-mi-izq {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    position: relative;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
 }
-
 .body-sobre-mi .sobre-mi-izq img {
-    width: 100%;
-    height: calc(100vh - 80px); /* Restamos 80px para el tamaño de la cabecera */
-    object-fit: cover;
+  width: 100%;
+  height: calc(100vh - 80px);
+  /* Restamos 80px para el tamaño de la cabecera */
+  object-fit: cover;
 }
 
 /*Estilos para plans.html*/
 .body-planes {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: calc(100vh - 80px);
-    padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: calc(100vh - 80px);
+  padding: 20px;
+}
+.body-planes .wrapper {
+  max-width: 1090px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: space-between;
+}
+.body-planes .wrapper .tabla {
+  background-color: rgba(88, 87, 92, 0.4784313725);
+  width: calc(33% - 20px);
+  padding: 30px;
+  border-radius: 7px;
+}
+.body-planes .wrapper .tabla .nombre-plan {
+  margin-bottom: 20px;
+}
+.body-planes .wrapper .tabla .caracteristicas h3 {
+  margin-bottom: 10px;
+}
+.body-planes .wrapper .tabla .caracteristicas li {
+  margin-bottom: 15px;
+  display: flex;
+}
+.body-planes .wrapper .tabla .caracteristicas li .item-lista {
+  font-size: 17px;
+  font-weight: 400;
+  margin-left: 15px;
+}
+.body-planes .wrapper .tabla .caracteristicas li .icon {
+  font-size: 15px;
 }
 
-.wrapper {
-    max-width: 1090px;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    justify-content: space-between;
-}
-
-.wrapper .tabla {
-    background-color: #58575c7a;
-    width: calc(33% - 20px);
-    padding: 30px;
-    border-radius: 7px;
-}
-
-.wrapper .tabla .nombre-plan {
-    margin-bottom: 20px;
-}
-
-.wrapper .tabla .caracteristicas h3 {
-    margin-bottom: 10px;
-}
-
-.wrapper .tabla .caracteristicas li {
-    margin-bottom: 15px;
-    display: flex;
-}
-
-.wrapper .tabla .caracteristicas li .item-lista {
-    font-size: 17px;
-    font-weight: 400;
-    margin-left: 15px;
-}
-
-.wrapper .tabla .caracteristicas li .icon {
-    font-size: 15px;
+.boton a {
+  background: #eb5f0a;
+  color: white;
+  font-size: 18px;
+  border-radius: 3px;
+  padding: 5px 13px;
+  cursor: pointer;
 }
 
 /*Estilos para contact-me.html*/
-
 .body-contacto {
-    min-height: calc(100vh - 80px);
-    width: 100%;
-    background-color: #58575c;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  min-height: calc(100vh - 80px);
+  width: 100%;
+  background-color: #58575c;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 .body-contacto .formulario {
-    width: 50%;
-    background-color: #fff;
-    border-radius: 6px;
-    padding: 20px 60px 40px 40px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  width: 50%;
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 20px 60px 40px 40px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-
 .body-contacto .formulario .contenido {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-
 .body-contacto .formulario .contenido .lado-izquierdo {
-    width: 25%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
-
 .body-contacto .formulario .contenido .lado-izquierdo .detalle {
-    text-align: center;
-    margin: 14px;
+  text-align: center;
+  margin: 14px;
 }
-
 .body-contacto .formulario .contenido .lado-izquierdo .detalle i {
-    font-size: 30px;
-    color: #eb5f0a;
-    margin-bottom: 10px;
+  font-size: 30px;
+  color: #eb5f0a;
+  margin-bottom: 10px;
 }
-
 .body-contacto .formulario .contenido .lado-izquierdo .detalle .titulo {
-    font-size: 18px;
+  font-size: 18px;
 }
-
-.body-contacto .formulario .contenido .lado-izquierdo .detalle .subtitulo1,
-.body-contacto .formulario .contenido .lado-izquierdo .detalle .subtitulo2 {
-    font-size: 14px;
-    color: black;
+.body-contacto .formulario .contenido .lado-izquierdo .subtitulo1,
+.body-contacto .formulario .contenido .lado-izquierdo .subtitulo2 {
+  font-size: 14px;
+  color: black;
 }
-
 .body-contacto .formulario .contenido .lado-derecho {
-    width: 75%;
-    margin-left: 65px;
+  width: 75%;
+  margin-left: 65px;
 }
-
 .body-contacto .formulario .contenido .lado-derecho .titulo-formulario {
-    font-size: 23px;
-    font-weight: 600;
-    color: #eb5f0a;
+  font-size: 23px;
+  font-weight: 600;
+  color: #eb5f0a;
 }
-
 .body-contacto .formulario .contenido .lado-derecho .caja-input input,
 .body-contacto .formulario .contenido .lado-derecho .caja-input textarea {
-    height: 50px;
-    width: 100%;
-    margin: 12px 0;
-    padding: 0 15px;
-    border: none;
-    font-size: 16px;
-    background: #F0F1F8;
-    border-radius: 6px;
-    resize: none;
+  height: 50px;
+  width: 100%;
+  margin: 12px 0;
+  padding: 0 15px;
+  border: none;
+  font-size: 16px;
+  background: #F0F1F8;
+  border-radius: 6px;
+  resize: none;
 }
-
 .body-contacto .formulario .contenido .lado-derecho .caja-mensaje {
-    min-height: 110px;
+  min-height: 110px;
+}
+.body-contacto .formulario .contenido .lado-derecho form input {
+  background: #eb5f0a;
+  color: white;
+  font-size: 18px;
+  border-radius: 3px;
+  padding: 5px 13px;
+  cursor: pointer;
+}
+.body-contacto .formulario .contenido .lado-derecho form input.active,
+.body-contacto .formulario .contenido .lado-derecho form input:active {
+  background: #be4801;
 }
 
 /***************/
 /*MEDIA QUERIES*/
 /***************/
-
 /*Estilos para celulares*/
 @media screen and (max-width: 600px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
-
-
-    .check-button {
-        display: block;
-    }
-
-    nav ul {
-        font-size: 16px;
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #eb5f0a;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all 0.5s;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 50px auto;
-        line-height: 30px;
-    }
-
-    nav ul li a {
-        font-size: 20px;
-    }
-
-    a.active,
-    a:hover {
-        background: #be4801;
-        font-weight: bold;
-    }
-
-    #check:checked~ul {
-        left: 0;
-    }
-
-    .body-index {
-        max-width: 80%;
-        margin-left: 15px;
-        padding-top: 20px;
-    }
-
-    .body-index h1 {
-        font-size: 2.6rem;
-    }
-
-    .body-index p {
-        font-size: 1rem;
-        line-height: 24px;
-        padding-top: 20px;
-        padding-left: 35px;
-        margin-bottom: 20px
-    }
-
-    /*Estilos para contact-me.html*/
-    .body-contacto .formulario {
-        width: 90%;
-        padding: 20px 35px 40px 35px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    }
-
-    /*Estilos para plans.html*/
-    .wrapper .tabla {
-        width: calc(100% - 20px);
-        margin-bottom: 40px;
-    }
+  /*Estilos de cabecera para todos los HTML*/
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  .check-button {
+    display: block;
+  }
+  nav ul {
+    font-size: 16px;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #eb5f0a;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px auto;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  nav ul li a.active,
+  nav ul li a:hover {
+    background: #be4801;
+    font-weight: bold;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
+  /*Estilos de cuerpo principal para index.html*/
+  .body-index {
+    max-width: 80%;
+    margin-left: 15px;
+    padding-top: 20px;
+  }
+  .body-index h1 {
+    font-size: 2.6rem;
+  }
+  .body-index p {
+    font-size: 1rem;
+    line-height: 24px;
+    padding-top: 20px;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+  /*Estilos para about-me.html*/
+  .body-sobre-mi h1 {
+    display: none;
+    font-size: 2.6rem;
+  }
+  .body-sobre-mi p {
+    font-size: 1rem;
+    line-height: 24px;
+    padding-top: 20px;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+  /*Estilos para contact-me.html*/
+  .body-contacto .formulario {
+    width: 90%;
+    padding: 20px 35px 40px 35px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
+  /*Estilos para plans.html*/
+  .wrapper .tabla {
+    width: calc(100% - 20px);
+    margin-bottom: 40px;
+  }
 }
-
 /*Estilos para tablet*/
 @media screen and (max-width: 1200px) {
-    label.logo {
-        font-size: 30px;
-        padding-left: 50px;
-    }
-
-    .check-button {
-        display: block;
-    }
-
-    ul {
-        font-size: 16px;
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #eb5f0a;
-        top: 80px;
-        left: -100%;
-        text-align: center;
-        transition: all 0.5s;
-    }
-
-    nav ul li {
-        display: block;
-        margin: 50px auto;
-        line-height: 30px;
-    }
-
-    nav ul li a {
-        font-size: 20px;
-    }
-
-    a.active,
-    a:hover {
-        background: #be4801;
-        font-weight: bold;
-    }
-
-    #check:checked~ul {
-        left: 0;
-    }
-
-
-    .body-index {
-        max-width: 80%;
-        margin-left: 25px;
-        padding-top: 40px;
-    }
-
-    .body-index h1 {
-        font-size: 2.6rem;
-    }
-
-    .body-index p {
-        max-width: 60%;
-        font-size: 1rem;
-        line-height: 24px;
-        padding-top: 20px;
-        padding-left: 35px;
-        margin-bottom: 20px
-    }
-
-    /*Estilos para contact-me.html*/
-    .body-contacto .formulario {
-        width: 65%;
-        padding: 20px 35px 40px 35px;
-        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    }
+  /*Estilos de cabecera para todos los HTML*/
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  .check-button {
+    display: block;
+  }
+  nav ul {
+    font-size: 16px;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #eb5f0a;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all 0.5s;
+  }
+  nav ul li {
+    display: block;
+    margin: 50px auto;
+    line-height: 30px;
+  }
+  nav ul li a {
+    font-size: 20px;
+  }
+  nav ul li a.active,
+  nav ul li a:hover {
+    background: #be4801;
+    font-weight: bold;
+  }
+  #check:checked ~ ul {
+    left: 0;
+  }
+  /*Estilos de cuerpo principal para index.html*/
+  .body-index {
+    max-width: 80%;
+    margin-left: 25px;
+    padding-top: 40px;
+  }
+  .body-index h1 {
+    font-size: 2.6rem;
+  }
+  .body-index p {
+    max-width: 60%;
+    font-size: 1rem;
+    line-height: 24px;
+    padding-top: 20px;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+  /*Estilos para about-me.html*/
+  .body-sobre-mi h1 {
+    font-size: 2.6rem;
+  }
+  .body-sobre-mi p {
+    font-size: 1rem;
+    line-height: 24px;
+    padding-top: 20px;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+  /*Estilos de cuerpo principal para contact-me.html*/
+  .body-contacto .formulario {
+    width: 65%;
+    padding: 20px 35px 40px 35px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
 }
+
+/*# sourceMappingURL=main.css.map */
